# json-q

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  input.json  jsonq  makefile
src/: ast.h  file.c  file.h  lexer.c  lexer.h  main.c  parser.c  parser.h  token.c  token.h  util.c  util.h
